# fractal

./: .gitignore  CMakeLists.txt  fractal-mt.ispc  fractal.ispc  main.cpp  newton_fractal.ppm  readme.md
include/: fractal_ispc.h
